# apksource

./: ApkSource.sh  README.md  pyproject.toml  requirements.txt  setup.cfg
apksource/: cli.py  core.py
