[metadata]
name = apksource
version = 1.3.1
description = ApkSource is a program to directly transform apk into source code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Llucs/apksource
author = Llucs
author_email = c307lucas@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click
    rich
python_requires = >=3.8

[options.entry_points]
console_scripts =
    apksource = apksource.cli:main

[options.packages.find]
where = .
